<!--
  ~ Copyright 2016 Guilherme Penedo
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">PokeRadar</string>

    <string name="title_activity_maps">PokeRadar</string>
    <string name="title_activity_login">Login to PTC</string>

    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in to PTC</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_incorrect_password">Invalid login details</string>
    <string name="error_field_required">This field is required</string>
    <string name="dummyAccountWarning">Do not use your real account! You\'ll get banned! Instead, use a dummy/throwaway PTC account.</string>
    <string name="cancel">Cancel</string>
    <string name="scan">Scan</string>
    <string name="done">Done</string>
    <string name="title_activity_maps2">Map</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="log_out">Log out</string>
    <string name="expected_scan_time">"Expected scan time: %1$s"</string>
    <string name="login_server_exception">Could not reach servers. They are probably down.</string>
    <string name="fetch_data_servers_down">Could not fetch data! Are the servers down?</string>
    <string name="scan_center">Scan center</string>
    <string name="scan_center_infowindow">Scans are centered on this location.\n Long press on the map or drag it to change center.</string>
    <string name="lured_remaining">%1$s for new pokemon</string>
    <string name="gym_points">Points: %1$d</string>
    <string name="pokemon_despawns_time">Despawns in: %1$s</string>
    <string name="center_marker_title">Center</string>
    <string name="error_location_services_disabled">Error getting current location! Are location services enabled?</string>
    <string name="error_delay_invalid">Please use a smaller value for delay setting</string>
    <string name="error_steps_invalid">Please use a smaller value steps setting</string>
    <string name="pokestop">POKESTOP</string>
    <string name="lured_pokestop">LURED POKESTOP</string>
    <string name="gym">GYM</string>
    <string name="spawnpoint">SPAWNPOINT</string>
    <string name="filter_pokemons">Filter pokemons</string>
    <string name="setting_filter_pokemon_summary">Show %1$s</string>
    <string name="countdown">%1$dmin, %2$dsec</string>
    <string name="team">team</string>
    <string name="gym_details_points">%1$d Points</string>
    <string name="pokemon">pokemon</string>
    <string name="weak_against">Weak against</string>
    <string name="strong_against">Strong against</string>
    <string name="gym_details">Click for GYM details and pokemon stats!</string>
    <string name="logo">logo</string>
</resources>
